tests/ui/imports/shadow-glob-module-resolution-3.stderr
error: cannot determine resolution for the import
  --> $DIR/shadow-glob-module-resolution-3.rs:11:5
   |
LL | use b::c;
   |     ^^^^

error: cannot determine resolution for the import
  --> $DIR/shadow-glob-module-resolution-3.rs:11:5
   |
LL | use b::c;
   |     ^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0432]: unresolved import `b::c`
  --> $DIR/shadow-glob-module-resolution-3.rs:11:5
   |
LL | use b::c;
   |     ^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
